# vocabtrainer

./: index.html  pyproject.toml
assets/: index.0726585d.js  index.56ec5a50.css  words.049e438d.js  words.9a6f4cda.js
frontend/: package.json  pnpm-lock.yaml
